first integration of togetherjs #389

--- a/src/html/templates/head.jade
+++ b/src/html/templates/head.jade
@@ -34,3 +34,6 @@ script(type='text/javascript', src='libs/pixlr/pixlr.js')
 
 // html beautifyer
 script(type='text/javascript', src='libs/beautify-html.js')
+
+// togetherjs
+script(type='text/javascript', src='https://togetherjs.com/togetherjs-min.js')
