attempt to edit in codepen

--- a/src/css/context-menu.less
+++ b/src/css/context-menu.less
@@ -46,27 +46,28 @@
     margin-top: 5px;
   }
 /* now use fontawesome:
-  .save {background-image: url(../assets/context-menu/glyphicons-447-floppy-save.png);}
-  .undo {background-image: url(../assets/context-menu/glyphicons-436-undo.png);}
-  .redo {background-image: url(../assets/context-menu/glyphicons-435-redo.png);}
-  .html {background-image: url(../assets/context-menu/glyphicons-118-embed.png);}
-  .delete {background-image: url(../assets/context-menu/glyphicons-208-remove-2.png);}
-  .top {background-image: url(../assets/context-menu/glyphicons-415-disk-save-rotated.png);}
-  .up {background-image: url(../assets/context-menu/glyphicons-214-up-arrow.png);}
-  .down {background-image: url(../assets/context-menu/glyphicons-213-down-arrow.png);}
-  .bottom {background-image: url(../assets/context-menu/glyphicons-415-disk-save.png);}
-  .preview {background-image: url(../assets/context-menu/glyphicons-52-eye-open.png);}
-  .help {background-image: url(../assets/context-menu/glyphicons-195-circle-question-mark.png);}
-  .mobile {background-image: url(../assets/context-menu/glyphicons-164-iphone.png);}
-  .desktop {background-image: url(../assets/context-menu/glyphicons-161-imac.png);}
+  .save {background-image: data-uri('../assets/context-menu/glyphicons-447-floppy-save.png');}
+  .undo {background-image: data-uri('../assets/context-menu/glyphicons-436-undo.png');}
+  .redo {background-image: data-uri('../assets/context-menu/glyphicons-435-redo.png');}
+  .html {background-image: data-uri('../assets/context-menu/glyphicons-118-embed.png');}
+  .delete {background-image: data-uri('../assets/context-menu/glyphicons-208-remove-2.png');}
+  .top {background-image: data-uri('../assets/context-menu/glyphicons-415-disk-save-rotated.png');}
+  .up {background-image: data-uri('../assets/context-menu/glyphicons-214-up-arrow.png');}
+  .down {background-image: data-uri('../assets/context-menu/glyphicons-213-down-arrow.png');}
+  .bottom {background-image: data-uri('../assets/context-menu/glyphicons-415-disk-save.png');}
+  .preview {background-image: data-uri('../assets/context-menu/glyphicons-52-eye-open.png');}
+  .help {background-image: data-uri('../assets/context-menu/glyphicons-195-circle-question-mark.png');}
+  .mobile {background-image: data-uri('../assets/context-menu/glyphicons-164-iphone.png');}
+  .desktop {background-image: data-uri('../assets/context-menu/glyphicons-161-imac.png');}
  */
-  .text {background-image: url(../assets/context-menu/glyphicons-108-text-resize.png);}
-  .image {background-image: url(../assets/context-menu/glyphicons-139-picture.png);}
-  .container {background-image: url(../assets/context-menu/glyphicons-95-vector-path-square.png);}
-  .copy {background-image: url(../assets/context-menu/glyphicons-512-copy.png);}
-  .paste {background-image: url(../assets/context-menu/glyphicons-513-paste.png);}
-  .previewResponsize {background-image: url(../assets/context-menu/responsize-small.png);}
-}
+  .text {background-image: data-uri('../assets/context-menu/glyphicons-108-text-resize.png');}
+  .image {background-image: data-uri('../assets/context-menu/glyphicons-139-picture.png');}
+  .container {background-image: data-uri('../assets/context-menu/glyphicons-95-vector-path-square.png');}
+  .copy {background-image: data-uri('../assets/context-menu/glyphicons-512-copy.png');}
+  .paste {background-image: data-uri('../assets/context-menu/glyphicons-513-paste.png');}
+  .previewResponsize {background-image: data-uri('../assets/context-menu/responsize-small.png');}
+  .codepen {background-image: data-uri('../assets/context-menu/codepen.png');}
+  }
 
 // mobile mode icons
 body .silex-context-menu .mobile {.silex-context-menu .off}
