--- a/src/html/templates/workspace.jade
+++ b/src/html/templates/workspace.jade
@@ -40,6 +40,7 @@
     .button.sep
     .button.preview.fa-inverse.fa-eye.off(title='Preview')
     .button.previewResponsize.off(title='Preview in Responsize')
+    .button.codepen(title='edit in codepen.io')
     .button.sep
     a.button.right.help.fa-inverse.fa-question-circle(href='https://github.com/silexlabs/Silex/wiki', title="get help here!", target='_blank')
     .button.right.mobile.fa-inverse.fa-mobile(title="Mobile editor")
