--- a/src/html/templates/menu.jade
+++ b/src/html/templates/menu.jade
@@ -97,6 +97,8 @@
     .sub-menu-item(title='Html', data-menu-action='insert.html')
       span.icon.html.fa-inverse.fa-code
       span Add Html
+    .label CC0 Images
+    input.image-search(type='text', placeholder='search', autofocus='')
 
   .code-menu-container
     .label Code Menu
