comments and cleanup

--- a/src/css/loader.less
+++ b/src/css/loader.less
@@ -1,10 +1,11 @@
 .silex-workspace {
-  transition: opacity .5s ease-out;
+  transition: opacity .5s ease-out .25s;
   opacity: 1;
 }
 .loader {
   z-index: -1;
   height: 0;
+  overflow: hidden;
 }
 .loading-pending {
   .silex-workspace {
