wip resize depending on browser window size (smaller on smaller screen)

--- a/src/css/menu.less
+++ b/src/css/menu.less
@@ -1,3 +1,13 @@
+
+@media (max-width: 1000px) {
+  html {
+    width: 200%;
+    height: 200%;
+    position: absolute;
+    transform: translate(-25%, -25%) scale(0.5, 0.5);
+  }
+}
+
 .silex-icons-menu {
   background-color: @silexmediumgrey; /* hide sub menu during opening */
   overflow: hidden;
