--- a/src/html/templates/head.jade
+++ b/src/html/templates/head.jade
@@ -16,6 +16,9 @@ script(type='text/javascript').
 // alertify.js
 script(type='text/javascript', src='libs/alertify/alertify.min.js')
 
+// prodotype
+script(type='text/javascript', src='libs/prodotype/prodotype.js')
+
 // source map
 script(type='text/javascript', src='libs/source-map.min.js')
 
