--- a/src/html/templates/property-tool.jade
+++ b/src/html/templates/property-tool.jade
@@ -195,3 +195,4 @@
               a.help-icon(href='https://github.com/silexlabs/Silex/issues/184#properties-css-panel', title='about Silex and CSS', target='_blank') Help
             input.style-css-classes-input(placeholder='-', type='text')
             .element-style-editor.editor-container
+      .component-editor.editor-container
