--- a/src/css/newwebsite-dialog.less
+++ b/src/css/newwebsite-dialog.less
@@ -156,6 +156,7 @@
       .thumbnail {
         width: 100%;
         height: @cardHeightSmall - @titleHeight;
+        max-width: @cardWidth;
       }
       .ui a {
         display: none;
