--- a/src/html/templates/newwebsite-dialog.jade
+++ b/src/html/templates/newwebsite-dialog.jade
@@ -2,6 +2,7 @@
   h1.title
     | Create a website
   button.close-btn(type="button")
+  a.help-btn.fa.fa-inverse.fa-info(href="https://github.com/silexlabs/Silex/wiki/start-a-new-website", target="_blank") Help
 .body
   .top
     .pane.open-pane
