--- a/static/2.6/front-end.css
+++ b/static/2.6/front-end.css
@@ -183,3 +183,20 @@ a:focus{ outline: none;}
   }
 }
 
+/**
+ * prodotype components
+ */
+.prodotype-runtime {
+  display: none;
+}
+body.silex-runtime .prodotype-runtime {
+  display: block;
+}
+body.silex-runtime .prodotype-preview {
+  display: none;
+}
+.prodotype-force-size {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
