--- a/src/html/templates/page-tool.jade
+++ b/src/html/templates/page-tool.jade
@@ -7,7 +7,7 @@ script.page-tool-template(type="text/x-handlebars-template").
 .label Pages
 .page-tool-container
 .ui-container
-  .icon.add-page.fa-fw.fa-inverse.fa-plus-square(title="Add a page")
-  .icon.remove-page.fa-fw.fa-inverse.fa-minus-square(title="Delete page")
-  .icon.move-page-up.fa-fw.fa-inverse.fa-caret-square-o-up(title="Move page up")
-  .icon.move-page-down.fa-fw.fa-inverse.fa-caret-square-o-down(title="Move page down")
+  .icon.add-page.fa.fa-fw.fa-inverse.fa-plus-square(title="Add a page")
+  .icon.remove-page.fa.fa-fw.fa-inverse.fa-minus-square(title="Delete page")
+  .icon.move-page-up.fa.fa-fw.fa-inverse.fa-caret-square-o-up(title="Move page up")
+  .icon.move-page-down.fa.fa-fw.fa-inverse.fa-caret-square-o-down(title="Move page down")
