--- a/src/css/newwebsite-dialog.less
+++ b/src/css/newwebsite-dialog.less
@@ -131,7 +131,7 @@
         box-shadow: inset 0 1px 0 @silexlightgrey;
         padding: 10px;
         cursor: pointer;
-        .fa {
+        .svg-inline--fa {
           padding-right: 10px;
         }
       }
