--- a/src/html/templates/head.jade
+++ b/src/html/templates/head.jade
@@ -29,9 +29,9 @@ script(type='text/javascript', src='libs/ace/ext-language_tools.js')
 // favicon
 link(rel="shortcut icon", href="assets/favicon.png")
 
-// pixlr editor
-// script(type='text/javascript', src='libs/pixlr/pixlr.js')
-
 // beautifyers
-script(type='text/javascript', src='libs/js-beautify/beautify-html.js')
 script(type='text/javascript', src='libs/js-beautify/beautify-css.js')
+
+
+script(type='text/javascript', defer, src="../libs/font-awesome/svg-with-js/js/fontawesome-all.js")
+script(type='text/javascript', defer, src="../libs/font-awesome/svg-with-js/js/fa-v4-shims.js")
