--- a/src/html/templates/property-tool.jade
+++ b/src/html/templates/property-tool.jade
@@ -197,6 +197,7 @@
   span.prodotype-style-editor.editor-container
     .prodotype-style-editor-menu
       label(for='class-name-style-combo-box') Apply to:
+      input#class-name-style-input.class-name-style-input(type='text')
       select#class-name-style-combo-box.class-name-style-combo-box.combobox
       .add-style.icon.fa.fa-lg.fa-plus(title='Add a text style.')
       .remove-style.icon.fa.fa-lg.fa-minus(title='Delete the current text style.')
