attach domain name to vhost, website URL in settings

--- a/src/css/alertify.less
+++ b/src/css/alertify.less
@@ -34,6 +34,12 @@
       }
 
     }
+    select {
+      padding: 5px;
+      background-color: @silexlightergrey;
+      color: @silexdarkgrey;
+      margin-bottom: 50px;
+    }
 }
 
 .alertify-cover {
