--- a/src/html/templates/settings-dialog.jade
+++ b/src/html/templates/settings-dialog.jade
@@ -102,6 +102,12 @@
           li
             fieldset
               legend
+                h3.title Website URL
+              p
+                | The address where your website will be available after publish.
+              input.input-path.input-website-url(type="text", value="")
+            fieldset
+              legend
                 h3.title Publication Path -&nbsp;
                   a.help-icon(href="https://github.com/silexlabs/Silex/wiki/Publishing-and-Releasing-Your-Website", title="about Silex publication process", target="blank") Help
               p
