--- a/src/html/templates/head.jade
+++ b/src/html/templates/head.jade
@@ -23,8 +23,8 @@ script(type='text/javascript', src='libs/prodotype/prodotype.js')
 script(type='text/javascript', src='libs/source-map.min.js')
 
 // ace
-script(type='text/javascript', src='libs/ace/ace.js')
-script(type='text/javascript', src='libs/ace/ext-language_tools.js')
+//- script(type='text/javascript', src='libs/ace/ace.js')
+//- script(type='text/javascript', src='libs/ace/ext-language_tools.js')
 
 // favicon
 link(rel="shortcut icon", href="assets/favicon.png")
