constants shared client server, wip debug ts

--- a/src/css/_styles.less
+++ b/src/css/_styles.less
@@ -1,9 +1,8 @@
 /* Normalize css */
-@import (inline) "../../dist/client/libs/normalize.css";
+@import (inline) "../../node_modules/normalize.css/normalize.css";
 
 /* Alertify css */
-@import (inline) "../../dist/client/libs/alertify/alertify.core.css";
-@import (inline) "../../dist/client/libs/alertify/alertify.bootstrap.css";
+@import (inline) "../../node_modules/alertifyjs/build/css/alertify.min.css";
 
 /* Silex styles imports */
 @import "_variables";
