--- a/src/css/main.less
+++ b/src/css/main.less
@@ -4,7 +4,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: lighter;
-  src: local('Roboto'), url('../roboto.woff2') format('woff2');
+  src: local('Roboto'), url('../ce/cloud-explorer/fonts/Regular/OpenSans-Regular.woff2') format('woff2');
 }
 
 ::-webkit-scrollbar {
