--- a/src/html/debug.jade
+++ b/src/html/debug.jade
@@ -1,6 +1,5 @@
 extends index.jade
 
-block silexboot
-  script(type='module').
-    import { App } from './js/App.js';
-    new App(true);
+block silex-options
+  script(type='text/javascript').
+    console.log('todo: debug mode')
