wip: integration stage

--- a/src/css/alertify.less
+++ b/src/css/alertify.less
@@ -1,5 +1,8 @@
-.alertify {
-    background-color: @silexdarkgrey;
+.alertify .ajs-modal .ajs-dialog {
+  background-color: @silexdarkgrey;
+  & > * {
+      background-color: @silexdarkgrey;
+    }
     &, a { color: @silexlightergrey; }
     border-radius: 0;
 
