--- a/static/2.9/front-end.css
+++ b/static/2.9/front-end.css
@@ -60,8 +60,8 @@ body.silex-runtime .silex-element-content {
   left: 0;
   top: 0;
   right: 0;
-  padding: 15px 100px;
-  margin: 5px 5px;
+  padding: 0 100px;
+  margin: 0;
 }
 .silex-runtime .editable-style.section-element {
   padding: 0;
@@ -79,6 +79,11 @@ body.silex-runtime .silex-element-content {
   margin-left: auto;
   margin-right: auto;
   overflow: initial;
+  border-left: 1px dashed;
+  border-right: 1px dashed;
+}
+.section-element:last-of-type .silex-container-content {
+  border-bottom: 1px dashed;
 }
 /* background */
 .background{
@@ -90,7 +95,7 @@ body.silex-runtime .silex-element-content {
   z-index: 1;
 }
 /* resize */
-.editable-style.image-element .silex-element-content{
+.editable-style.image-element .silex-element-content {
   position: absolute;
   border-radius: inherit; /* this is to follow the element's radius */
   height: 100%;
