cleanup quotes, fixed text edition

--- a/static/2.9/front-end.css
+++ b/static/2.9/front-end.css
@@ -79,10 +79,12 @@ body.silex-runtime .silex-element-content {
   margin-left: auto;
   margin-right: auto;
   overflow: initial;
+}
+.silex-editor .section-element .silex-container-content {
   border-left: 1px dashed;
   border-right: 1px dashed;
 }
-.section-element:last-of-type .silex-container-content {
+.silex-editor .section-element:last-of-type .silex-container-content {
   border-bottom: 1px dashed;
 }
 /* background */
