--- a/static/2.9/front-end.css
+++ b/static/2.9/front-end.css
@@ -143,7 +143,7 @@ body.enable-mobile .background {
   /* mobile mode */
   body.enable-mobile .editable-style:not(.prevent-mobile-style),
   body.enable-mobile .background.background-initial {
-    position: relative;
+    position: static;
     top: auto;
     left: auto;
     max-width: 95%; /* less than 100% in the editor to be able to resize container */
