--- a/src/css/main.less
+++ b/src/css/main.less
@@ -53,6 +53,7 @@ body {
     border-radius: 2px;
     box-sizing: border-box;
     padding: 0 5px;
+    height: 35px;
   }
   input[type=checkbox], select, label[for] {
     cursor: pointer;
